fix some spacing

--- a/assets/scss/components/nav.scss
+++ b/assets/scss/components/nav.scss
@@ -1,5 +1,5 @@
 .nav {
-  padding: 6vh 8vw;
+  padding: 5vh 8vw;
   margin: auto;
 
   &.serie-page{
