--- a/assets/scss/pages/series.scss
+++ b/assets/scss/pages/series.scss
@@ -18,7 +18,7 @@
       display: flex;
       flex-direction: column;
       width: calc(60% - 2vw);
-      padding-top: 9.5vw;
+      padding-top: 6.5vw;
       position: relative;
 
       .back-link {
@@ -74,7 +74,7 @@
         display: flex;
         justify-content: space-between;
         padding-right: 3.75vw;
-        margin-top: 8.5vw;
+        margin-top: 6.5vw;
 
         &-column {
 
